<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/opusSummaryTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OpusActivity">

    <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
        android:id="@+id/opusPlayerView"
        android:layout_width="match_parent"
        android:layout_height="220dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/opusPlayerTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="番剧名称示例"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/opusPlayerSummaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="番剧简介示例" />

        <TextView
            android:id="@+id/opusPlayingEpisodesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/opus_player_playing_episodes_text_tpl" />

        <TextView
            android:id="@+id/isFollowOpusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opus_player_is_follow_status_text_tpl" />

        <TextView
            android:id="@+id/readStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/opus_player_read_status_text_tpl" />

        <GridView
            android:id="@+id/opusEpisodesChooserGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="3"/>
    </LinearLayout>

</LinearLayout>